[package]
name = "curls"
version = "0.1.0"
authors = ["Anthony Li <me@anli.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curlyc = { git = "https://github.com/curly-lang/curly-lang", branch = "main" }
tower-lsp = "0.13.3"
tokio = { version = "0.2", features = ["full"] }
codespan-reporting = "0.9"